Replace faulty assert with conditional return

Not having mimedata here is not a coding error or something that
should be fixed when it happens, it's a normal thing to happen
with clipboards.

BUG:501560